--- a/server-instances/main-app/client/index.html
+++ b/server-instances/main-app/client/index.html
@@ -15,5 +15,15 @@
 <body>
   <div id="root"></div>
   <script src="dist/bundle.js" type="text/javascript"></script>
+
+  <script>
+    // TODO transfer inside bundle
+    let initMap = window.initMap;
+    if (!initMap) window.initMap = () => {
+      console.log('google-apis-loaded');
+    };
+  </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmfhHX0UV_rByYrEUAb7L0bufKqppkYxM&callback=initMap"
+          async defer></script>
 </body>
 </html>
